--- a/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
+++ b/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
@@ -87,11 +87,21 @@
     <Compile Include="Client.cs" />
     <Compile Include="DietPlan.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202102190016007_firstmigrations.cs" />
+    <Compile Include="Migrations\202102190016007_firstmigrations.Designer.cs">
+      <DependentUpon>202102190016007_firstmigrations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202102190016007_firstmigrations.resx">
+      <DependentUpon>202102190016007_firstmigrations.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
