--- a/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
+++ b/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
@@ -85,12 +85,30 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
+    <Compile Include="SystemPlan.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202102190009556_init Migration.cs" />
+    <Compile Include="Migrations\202102190009556_init Migration.Designer.cs">
+      <DependentUpon>202102190009556_init Migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202102190059254_fixApplication.cs" />
+    <Compile Include="Migrations\202102190059254_fixApplication.Designer.cs">
+      <DependentUpon>202102190059254_fixApplication.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202102190009556_init Migration.resx">
+      <DependentUpon>202102190009556_init Migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102190059254_fixApplication.resx">
+      <DependentUpon>202102190059254_fixApplication.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
