--- a/Blue_Badge_Project.Models/Blue_Badge_Project.Models.csproj
+++ b/Blue_Badge_Project.Models/Blue_Badge_Project.Models.csproj
@@ -78,6 +78,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FitnessListItem.cs" />
+    <Compile Include="FitnessPlanCreate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
