--- a/Blue_Badge_Project.Services/Blue_Badge_Project.Services.csproj
+++ b/Blue_Badge_Project.Services/Blue_Badge_Project.Services.csproj
@@ -78,7 +78,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="FitnessPlanService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
