create diet method

--- a/Blue_Badge_Project.Services/Blue_Badge_Project.Services.csproj
+++ b/Blue_Badge_Project.Services/Blue_Badge_Project.Services.csproj
@@ -79,11 +79,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="DietService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Blue_Badge_Project.Models\Blue_Badge_Project.Models.csproj">
+      <Project>{5692fa8f-f199-4d81-9058-89a784c72166}</Project>
+      <Name>Blue_Badge_Project.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
