--- a/Blue_Badge_Project.Models/Blue_Badge_Project.Models.csproj
+++ b/Blue_Badge_Project.Models/Blue_Badge_Project.Models.csproj
@@ -85,6 +85,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemPlanCreate.cs" />
+    <Compile Include="SystemPlanDetail.cs" />
+    <Compile Include="SystemPlanEdit.cs" />
+    <Compile Include="SystemPlanListItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
