--- a/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
+++ b/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
@@ -91,6 +91,10 @@
     <Compile Include="Migrations\202102190016007_firstmigrations.Designer.cs">
       <DependentUpon>202102190016007_firstmigrations.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102221702303_DietPlan.cs" />
+    <Compile Include="Migrations\202102221702303_DietPlan.Designer.cs">
+      <DependentUpon>202102221702303_DietPlan.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -101,6 +105,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202102190016007_firstmigrations.resx">
       <DependentUpon>202102190016007_firstmigrations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102221702303_DietPlan.resx">
+      <DependentUpon>202102221702303_DietPlan.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
