--- a/Blue_Badge_Project.Services/Blue_Badge_Project.Services.csproj
+++ b/Blue_Badge_Project.Services/Blue_Badge_Project.Services.csproj
@@ -87,6 +87,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Blue_Badge_Project.Data\Blue_Badge_Project.Data.csproj">
+      <Project>{ba6918a3-dae0-47c2-b734-8a916533848a}</Project>
+      <Name>Blue_Badge_Project.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Blue_Badge_Project.Models\Blue_Badge_Project.Models.csproj">
       <Project>{5692fa8f-f199-4d81-9058-89a784c72166}</Project>
       <Name>Blue_Badge_Project.Models</Name>
