--- a/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
+++ b/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Migrations\202102190104410_deleteClientinIdentityOnlyFitPlan.cs" />
     <Compile Include="Migrations\202102190104410_deleteClientinIdentityOnlyFitPlan.Designer.cs">
       <DependentUpon>202102190104410_deleteClientinIdentityOnlyFitPlan.cs</DependentUpon>
+		</Compile>
     <Compile Include="DietPlan.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Migrations\202102190016007_firstmigrations.cs" />
@@ -112,18 +113,19 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\202102190043520_created fitnessPlanClass.resx">
-      <DependentUpon>202102190043520_created fitnessPlanClass.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102190104410_deleteClientinIdentityOnlyFitPlan.resx">
-      <DependentUpon>202102190104410_deleteClientinIdentityOnlyFitPlan.cs</DependentUpon>
-    <EmbeddedResource Include="Migrations\202102190016007_firstmigrations.resx">
-      <DependentUpon>202102190016007_firstmigrations.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102221702303_DietPlan.resx">
-      <DependentUpon>202102221702303_DietPlan.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="Migrations\202102190043520_created fitnessPlanClass.resx">
+			<DependentUpon>202102190043520_created fitnessPlanClass.cs</DependentUpon>
+		</EmbeddedResource>
+		<EmbeddedResource Include="Migrations\202102190104410_deleteClientinIdentityOnlyFitPlan.resx">
+			<DependentUpon>202102190104410_deleteClientinIdentityOnlyFitPlan.cs</DependentUpon>
+		</EmbeddedResource>    
+		<EmbeddedResource Include="Migrations\202102190016007_firstmigrations.resx">
+			<DependentUpon>202102190016007_firstmigrations.cs</DependentUpon>
+		</EmbeddedResource>
+		<EmbeddedResource Include="Migrations\202102221702303_DietPlan.resx">
+			<DependentUpon>202102221702303_DietPlan.cs</DependentUpon>
+		</EmbeddedResource>
+	</ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
