--- a/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
+++ b/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
@@ -92,8 +92,9 @@
       <DependentUpon>202102190043520_created fitnessPlanClass.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\202102190104410_deleteClientinIdentityOnlyFitPlan.cs" />
-    <Compile Include="Migrations\202102190104410_deleteClientinIdentityOnlyFitPlan.Designer.cs">
-      <DependentUpon>202102190104410_deleteClientinIdentityOnlyFitPlan.cs</DependentUpon>
+	  <Compile Include="Migrations\202102190104410_deleteClientinIdentityOnlyFitPlan.Designer.cs">
+		  <DependentUpon>202102190104410_deleteClientinIdentityOnlyFitPlan.cs</DependentUpon>
+	  </Compile>
     <Compile Include="DietPlan.cs" />
     <Compile Include="SystemPlan.cs" />
     <Compile Include="IdentityModels.cs" />
@@ -126,8 +127,9 @@
     <EmbeddedResource Include="Migrations\202102190043520_created fitnessPlanClass.resx">
       <DependentUpon>202102190043520_created fitnessPlanClass.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102190104410_deleteClientinIdentityOnlyFitPlan.resx">
-      <DependentUpon>202102190104410_deleteClientinIdentityOnlyFitPlan.cs</DependentUpon>
+	  <EmbeddedResource Include="Migrations\202102190104410_deleteClientinIdentityOnlyFitPlan.resx">
+		  <DependentUpon>202102190104410_deleteClientinIdentityOnlyFitPlan.cs</DependentUpon>
+	  </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102190016007_firstmigrations.resx">
       <DependentUpon>202102190016007_firstmigrations.cs</DependentUpon>
     </EmbeddedResource>
