--- a/Blue_Badge_Project.WebAPI/Blue_Badge_Project.WebAPI.csproj
+++ b/Blue_Badge_Project.WebAPI/Blue_Badge_Project.WebAPI.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Controllers\FitnessController.cs" />
     <Compile Include="Controllers\DietController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SystemPlanController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
