Push before altering metadata and register/applicationuser classes, etc

--- a/Blue_Badge_Project.Services/Blue_Badge_Project.Services.csproj
+++ b/Blue_Badge_Project.Services/Blue_Badge_Project.Services.csproj
@@ -54,12 +54,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppUserService.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Blue_Badge_Project.Data\Blue_Badge_Project.Data.csproj">
+      <Project>{ba6918a3-dae0-47c2-b734-8a916533848a}</Project>
+      <Name>Blue_Badge_Project.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Blue_Badge_Project.Models\Blue_Badge_Project.Models.csproj">
+      <Project>{5692fa8f-f199-4d81-9058-89a784c72166}</Project>
+      <Name>Blue_Badge_Project.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
