--- a/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
+++ b/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
@@ -84,13 +84,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client.cs" />
+    <Compile Include="AppUser.cs" />
+    <Compile Include="FitnessPlan.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202102190030055_InitMigration.cs" />
+    <Compile Include="Migrations\202102190030055_InitMigration.Designer.cs">
+      <DependentUpon>202102190030055_InitMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemPlan.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202102190030055_InitMigration.resx">
+      <DependentUpon>202102190030055_InitMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
