--- a/Blue_Badge_Project.Services/Blue_Badge_Project.Services.csproj
+++ b/Blue_Badge_Project.Services/Blue_Badge_Project.Services.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -79,7 +79,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FitnessService.cs" />
-    <Compile Include="Class1.cs" />
     <Compile Include="DietService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
