Before deleting old classes

--- a/Blue_Badge_Project.Models/Blue_Badge_Project.Models.csproj
+++ b/Blue_Badge_Project.Models/Blue_Badge_Project.Models.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppUserCreate.cs" />
+    <Compile Include="AppUserDetail.cs" />
     <Compile Include="AppUserListItem.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
