--- a/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
+++ b/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -12,6 +13,8 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,10 +35,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.3\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
@@ -87,68 +90,31 @@
     <Compile Include="AppUser.cs" />
     <Compile Include="FitnessPlan.cs" />
     <Compile Include="IdentityModels.cs" />
-    <Compile Include="Migrations\202102190030055_InitMigration.cs" />
-    <Compile Include="Migrations\202102190030055_InitMigration.Designer.cs">
-      <DependentUpon>202102190030055_InitMigration.cs</DependentUpon>
-    <Compile Include="FitnessPlan.cs" />
-    <Compile Include="Migrations\202102190043520_created fitnessPlanClass.cs" />
-    <Compile Include="Migrations\202102190043520_created fitnessPlanClass.Designer.cs">
-      <DependentUpon>202102190043520_created fitnessPlanClass.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202102190104410_deleteClientinIdentityOnlyFitPlan.cs" />
-    <Compile Include="Migrations\202102190104410_deleteClientinIdentityOnlyFitPlan.Designer.cs">
-      <DependentUpon>202102190104410_deleteClientinIdentityOnlyFitPlan.cs</DependentUpon>
-	</Compile>
     <Compile Include="DietPlan.cs" />
-    <Compile Include="SystemPlan.cs" />
-    <Compile Include="IdentityModels.cs" />
-    <Compile Include="Migrations\202102190016007_firstmigrations.cs" />
-    <Compile Include="Migrations\202102190016007_firstmigrations.Designer.cs">
-      <DependentUpon>202102190016007_firstmigrations.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202102221702303_DietPlan.cs" />
-    <Compile Include="Migrations\202102221702303_DietPlan.Designer.cs">
-      <DependentUpon>202102221702303_DietPlan.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202102190009556_init Migration.cs" />
-    <Compile Include="Migrations\202102190009556_init Migration.Designer.cs">
-      <DependentUpon>202102190009556_init Migration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202102190059254_fixApplication.cs" />
-    <Compile Include="Migrations\202102190059254_fixApplication.Designer.cs">
-      <DependentUpon>202102190059254_fixApplication.cs</DependentUpon>
+    <Compile Include="Migrations\202103030016430_restartMigration.cs" />
+    <Compile Include="Migrations\202103030016430_restartMigration.designer.cs">
+      <DependentUpon>202103030016430_restartMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemPlan.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202102190030055_InitMigration.resx">
-      <DependentUpon>202102190030055_InitMigration.cs</DependentUpon>
-    <EmbeddedResource Include="Migrations\202102190043520_created fitnessPlanClass.resx">
-      <DependentUpon>202102190043520_created fitnessPlanClass.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102190104410_deleteClientinIdentityOnlyFitPlan.resx">
-      <DependentUpon>202102190104410_deleteClientinIdentityOnlyFitPlan.cs</DependentUpon>
-	</EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102190016007_firstmigrations.resx">
-      <DependentUpon>202102190016007_firstmigrations.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102221702303_DietPlan.resx">
-      <DependentUpon>202102221702303_DietPlan.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\202102190009556_init Migration.resx">
-      <DependentUpon>202102190009556_init Migration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202102190059254_fixApplication.resx">
-      <DependentUpon>202102190059254_fixApplication.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202103030016430_restartMigration.resx">
+      <DependentUpon>202103030016430_restartMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
+  </Target>
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
 </Project>
