--- a/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
+++ b/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
@@ -88,8 +88,9 @@
     <Compile Include="FitnessPlan.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="Migrations\202102190030055_InitMigration.cs" />
-    <Compile Include="Migrations\202102190030055_InitMigration.Designer.cs">
-      <DependentUpon>202102190030055_InitMigration.cs</DependentUpon>
+	  <Compile Include="Migrations\202102190030055_InitMigration.Designer.cs">
+		  <DependentUpon>202102190030055_InitMigration.cs</DependentUpon>
+	  </Compile>
     <Compile Include="FitnessPlan.cs" />
     <Compile Include="Migrations\202102190043520_created fitnessPlanClass.cs" />
     <Compile Include="Migrations\202102190043520_created fitnessPlanClass.Designer.cs">
@@ -127,8 +128,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202102190030055_InitMigration.resx">
-      <DependentUpon>202102190030055_InitMigration.cs</DependentUpon>
+	  <EmbeddedResource Include="Migrations\202102190030055_InitMigration.resx">
+		  <DependentUpon>202102190030055_InitMigration.cs</DependentUpon>
+	  </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102190043520_created fitnessPlanClass.resx">
       <DependentUpon>202102190043520_created fitnessPlanClass.cs</DependentUpon>
     </EmbeddedResource>
