--- a/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
+++ b/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
@@ -90,9 +90,9 @@
     <Compile Include="FitnessPlan.cs" />
     <Compile Include="IdentityModels.cs" />
     <Compile Include="DietPlan.cs" />
-    <Compile Include="Migrations\202103030016430_restartMigration.cs" />
-    <Compile Include="Migrations\202103030016430_restartMigration.designer.cs">
-      <DependentUpon>202103030016430_restartMigration.cs</DependentUpon>
+    <Compile Include="Migrations\202103052354172_renewed.cs" />
+    <Compile Include="Migrations\202103052354172_renewed.designer.cs">
+      <DependentUpon>202103052354172_renewed.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="SystemPlan.cs" />
@@ -103,8 +103,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202103030016430_restartMigration.resx">
-      <DependentUpon>202103030016430_restartMigration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202103052354172_renewed.resx">
+      <DependentUpon>202103052354172_renewed.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
