Added AppUserEdit and aligned models

--- a/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
+++ b/Blue_Badge_Project.Data/Blue_Badge_Project.Data.csproj
@@ -94,6 +94,10 @@
     <Compile Include="Migrations\202103090334223_userId.designer.cs">
       <DependentUpon>202103090334223_userId.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103090522571_newAppUserEdit.cs" />
+    <Compile Include="Migrations\202103090522571_newAppUserEdit.designer.cs">
+      <DependentUpon>202103090522571_newAppUserEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="SystemPlan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -105,6 +109,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202103090334223_userId.resx">
       <DependentUpon>202103090334223_userId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103090522571_newAppUserEdit.resx">
+      <DependentUpon>202103090522571_newAppUserEdit.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
